[gd_scene load_steps=28 format=2]

[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=1]
[ext_resource path="res://Resourse Steal/Crab Sprite Sheet.png" type="Texture" id=2]
[ext_resource path="res://Hurtbox and Hitbox/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/hedgehog.gd" type="Script" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetection.tscn" type="PackedScene" id=6]
[ext_resource path="res://Hurtbox and Hitbox/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Hurtbox and Hitbox/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=9]

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "Angry",
"speed": 7.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "Move",
"speed": 10.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "IDLE",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=19]
radius = 1.99999
height = 8.00002

[sub_resource type="CapsuleShape2D" id=20]
radius = 5.43284
height = 0.0

[sub_resource type="CircleShape2D" id=21]
radius = 65.0052

[sub_resource type="CapsuleShape2D" id=36]
radius = 5.0

[sub_resource type="CircleShape2D" id=23]
radius = 5.55355

[node name="Crab" type="KinematicBody2D"]
position = Vector2( -0.486809, -0.753356 )
collision_layer = 16
collision_mask = 3
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.270103, 0.0334129 )
frames = SubResource( 18 )
animation = "Angry"
frame = 1
playing = true

[node name="Shadow" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( -0.403778, 15.7663 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.486809, 11.7534 )
rotation = 1.5708
shape = SubResource( 19 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 0.486809, 2.75336 )
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -0.552239, 8.79032 )
shape = SubResource( 20 )

[node name="Stats" parent="." instance=ExtResource( 5 )]

[node name="PlayerDetection" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 0.486809, 0.753357 )

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
modulate = Color( 1, 1, 1, 0.2 )
position = Vector2( -0.515503, 11.3413 )
shape = SubResource( 21 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 1.48681, 38.7534 )
collision_mask = 4
damage = 0.2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -1, -29 )
rotation = 1.5708
shape = SubResource( 36 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, 12 )
shape = SubResource( 23 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]
visible = false

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]
[editable path="PlayerDetection"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
[editable path="WanderController"]
